--- a/stock_api/Cargo.toml
+++ b/stock_api/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2021"
 
 [dependencies]
 axum = { version = "0.7.5", features = ["default", "macros"] }
-moka = { version = "0.12.5", features = ["future"] }
 reqwest = { version = "0.12.3", features = ["json", "rustls-tls"], default-features = false }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
@@ -15,3 +14,8 @@ tokio = { version = "1.37.0", features = ["full", "rt-multi-thread"] }
 thiserror = "1.0.59"
 anyhow = { version = "1.0.82", features = ["backtrace"] }
 clap = { version = "4.5.4", features = ["derive"] }
+chrono = { version = "0.4.38", features = ["serde"] }
+http = "1.1.0"
+scylla = { version = "0.12.0", features = ["chrono"] }
+lazy_static = "1.4.0"
+rdkafka = { version = "0.36.2", features = ["cmake-build", "tokio"] }
