--- a/stock_api/Cargo.toml
+++ b/stock_api/Cargo.toml
@@ -18,4 +18,4 @@ chrono = { version = "0.4.38", features = ["serde"] }
 http = "1.1.0"
 scylla = { version = "0.12.0", features = ["chrono"] }
 lazy_static = "1.4.0"
-rdkafka = { version = "0.36.2", features = ["cmake-build", "tokio"] }
+rdkafka = { version = "0.36.2", features = ["tokio"] }
