refactored naming conventions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 services:
-  zookeeper:
+  stock_api_zookeeper:
     image: confluentinc/cp-zookeeper:latest
     container_name: zookeeper
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
 
-  kafka:
+  stock_api_kafka:
     image: confluentinc/cp-kafka:latest
     container_name: kafka
     depends_on:
