--- a/user-info/docker-compose.yml
+++ b/user-info/docker-compose.yml
@@ -1,17 +1,6 @@
+version: '3.8'
+
 services:
-  web:
-    container_name: user-backend
-    build: 
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - "2001:5000"
-    depends_on:
-      - db
-    environment:
-      - DATABASE_URL=postgresql://user:password@db/psqldb
-    volumes:
-      - ./app:/app
   db:
     container_name: psqldb
     image: postgres:alpine
@@ -24,6 +13,21 @@ services:
     volumes:
       - db-data:/var/lib/postgresql/data
       - ./schema.sql:/docker-entrypoint-initdb.d/10-schema.sql
+
+  web:
+    container_name: user-backend
+    build: 
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "2010:5000"
+      - "2011:5001"
+    depends_on:
+      - db
+    environment:
+      - DATABASE_URL=postgresql://user:password@db/psqldb
+    volumes:
+      - ./app:/app
 
 volumes:
   db-data:
