--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,8 +4,6 @@ COPY . /app
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-EXPOSE 5000
-
 ENV NAME World
 
-CMD ["gunicorn", "-b", "0.0.0.0:5000", "app:app"]
+CMD ["python", "app.py"]
