--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-# TODO: change ports to be in corresponding range
 services:
   stock_api_zookeeper:
     container_name: stock_api_zookeeper
@@ -47,10 +46,6 @@ services:
       - "8080:8080"
     volumes:
       - ./frontend:/app
-
-
-volumes:
-  cassandra_data:
 
 
 # services:
@@ -135,3 +130,37 @@ volumes:
 #    build: ./matching_engine_postgres/
 #    ports:
 #      - "6432:6432"
+
+  web_db:
+    container_name: web_db
+    image: postgres:alpine
+    environment:
+      POSTGRES_DB: psqldb
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+    ports:
+      - "2002:5432"
+    volumes:
+      - db-data:/var/lib/postgresql/data
+      - ./user-info-db/schema.sql:/docker-entrypoint-initdb.d/10-schema.sql
+
+  web:
+    container_name: user-backend
+    build:
+      context: user-info
+      dockerfile: Dockerfile
+    ports:
+      - "2010:5000"
+      - "2011:5001"
+    depends_on:
+      - web_db
+    environment:
+      - DATABASE_URL=postgresql://user:password@web_db/psqldb
+    volumes:
+      - ./user-info/app:/app
+
+
+
+volumes:
+  cassandra_data:
+  db-data:
