--- a/matching_engine/Dockerfile
+++ b/matching_engine/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /app
 
 RUN pip install kafka-python
 RUN pip install redis
+RUN pip install requests
 COPY . /app
 
 ENTRYPOINT ["python3", "engine.py"]
