--- a/test/matching_engine/Dockerfile
+++ b/test/matching_engine/Dockerfile
@@ -3,6 +3,6 @@ FROM python:3.9-slim
 WORKDIR /app
 
 RUN pip install kafka-python
-COPY . /app
+COPY .. /app
 
 ENTRYPOINT ["python3", "producer.py"]
